--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,14 @@ __pycache__/
 .Python
 env/
 venv/
+.venv/
 *.egg-info/
 dist/
 build/
+
+# uv
+uv.lock
+.python-version
 
 # Build outputs
 outputs/*/generated/
