Complete Phase 3: Build slide generator and add images
- Created Remark.js template for GTN slides
- Built Python script to generate slides from markdown content
- Added all required images (PlantUML diagrams + Lagom screenshot)
- Created images/ directory with build infrastructure
- Added build.sh script for regenerating PlantUML SVGs
- Updated content files with image references
- Excluded testing.md from slide generation (not in original slides)
- Removed testing.md file (content not derived from original)
- Updated metadata.yaml with image documentation
- All 5 images now appear in generated slides

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@ uv.lock
 # Build outputs
 outputs/*/generated/
 
+# Generated images (keep source .txt files, ignore .svg)
+images/*.svg
+
 # IDE
 .vscode/
 .idea/
