Complete Phase 3: Slide generator enhancements and content improvements
- Added missing slides: 'Constructing the Object Is Still Brittle' and 'DI and Controllers - FastAPI Limitations'
- Implemented .code[] wrapper support for special code block formatting
- Added layout class support (reduce90, enlarge150) to slide generator
- Restored missing contributor (bgruening) to metadata
- Made contributors dynamic in template (from metadata)
- Updated unified approach slide to use diff format
- Created GitHub issue #1 for navigation footer feature
- Updated PLAN.md to reflect Phase 3 completion
- All images integrated and working correctly

--- a/topics/dependency-injection/metadata.yaml
+++ b/topics/dependency-injection/metadata.yaml
@@ -30,6 +30,9 @@ training:
   time_estimation: 15m
   prerequisites:
     - architecture-frameworks
+  contributors:
+    - jmchilton
+    - bgruening
 
 # Sphinx documentation metadata
 sphinx:
