Complete Phase 4: Enhanced validation framework
- Enhanced validate.py with content quality checks
- Added markdown validation (images, links, code blocks)
- Added cross-reference validation (code paths, images)
- Created comprehensive test suite (tests/test_validate.py)
- All 11 tests passing
- Added GitHub Actions CI workflow (.github/workflows/validate.yml)
- Added pytest as dev dependency
- Updated PLAN.md to reflect Phase 4 completion

Validation now checks:
- Metadata completeness and correctness
- Content quality (length, structure, headings)
- Markdown validity (images, code blocks, links)
- Cross-references (code paths mentioned in content)
- Image file existence

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,10 @@ dependencies = [
     "Jinja2>=3.1.0",
 ]
 
+[project.optional-dependencies]
+dev = [
+    "pytest>=7.0.0",
+]
+
 # Note: Scripts are run directly with uv run for now
 # Entry points can be added later if we package this as a proper Python package
