Implement Pydantic-based content model with granular slide blocks
Core changes:
- Created scripts/models.py with comprehensive Pydantic v2 models
  * TopicMetadata, ContentBlock, rendering configs with validators
  * Smart defaults: prose renders in docs only, slides everywhere by default
  * Rich validation: content sources, IDs, file refs, cross-references

- Created scripts/generate_schema_docs.py for auto-generating SCHEMA.md
  * Maintains single source of truth for schema
  * Auto-extracts field types, descriptions, defaults from models

- Simplified scripts/validate.py (~100 lines, was ~300)
  * Delegates validation logic to Pydantic models
  * Better error messages, cleaner code

- Migrated dependency-injection to granular content.yaml
  * 25 slides as separate blocks with unique IDs
  * Each block: type, id, heading (optional), content
  * Supports inline content, fragment files, or fragment lists
  * Image-only slides no longer need dummy headings

- Updated PLAN.md to document standard migration pattern
  * One slide per block in content.yaml
  * Each slide gets unique ID, type, heading (optional)
  * Granular control, no content duplication

- Updated pyproject.toml with pydantic>=2.0.0 dependency
- Fixed metadata.yaml image fields (description -> alt)
- Auto-generated docs/SCHEMA.md with complete validation rules

This establishes the core content model for all future topics.

--- a/topics/dependency-injection/metadata.yaml
+++ b/topics/dependency-injection/metadata.yaml
@@ -30,9 +30,6 @@ training:
   time_estimation: 15m
   prerequisites:
     - architecture-frameworks
-  contributors:
-    - jmchilton
-    - bgruening
 
 # Sphinx documentation metadata
 sphinx:
@@ -61,19 +58,20 @@ related_code_paths:
 # Images used in slides (shared across topics)
 images:
   - path: ../../images/app_py2.plantuml.svg
-    description: "Python 2 era app structure"
-    source: images/app_py2.plantuml.txt
+    alt: "Python 2 era app structure"
   - path: ../../images/app_types_no_interface.plantuml.svg
-    description: "Typed app without interface showing circular dependency"
-    source: images/app_types_no_interface.plantuml.txt
+    alt: "Typed app without interface showing circular dependency"
   - path: ../../images/app_types.plantuml.svg
-    description: "Typed app with StructuredApp interface breaking circular dependency"
-    source: images/app_types.plantuml.txt
+    alt: "Typed app with StructuredApp interface breaking circular dependency"
   - path: ../../images/app_decomposed.plantuml.svg
-    description: "Decomposed app structure with dependency injection"
-    source: images/app_decomposed.plantuml.txt
+    alt: "Decomposed app structure with dependency injection"
   - path: ../../images/lagom_ss.png
-    description: "Lagom dependency injection library website screenshot"
+    alt: "Lagom dependency injection library website screenshot"
+
+# Contributors
+contributors:
+  - jmchilton
+  - bgruening
 
 # Claude context
 claude:
@@ -82,4 +80,3 @@ claude:
     - Dependency injection patterns
     - Manager initialization
     - Testing with injected dependencies
-
