--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ requires-python = ">=3.11"
 dependencies = [
     "PyYAML>=6.0",
     "Jinja2>=3.1.0",
+    "pydantic>=2.0.0",
 ]
 
 [project.optional-dependencies]
