--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,11 @@ dependencies = [
 dev = [
     "pytest>=7.0.0",
 ]
+docs = [
+    "sphinx>=7.0.0",
+    "myst-parser>=2.0.0",
+    "sphinx-rtd-theme>=2.0.0",
+]
 
 # Note: Scripts are run directly with uv run for now
 # Entry points can be added later if we package this as a proper Python package
