Update ecosystem content: Gitter → Matrix/Element
- Replace gitter_galaxyproject.png with element_galaxyproject.png (actual Element space screenshot)
- Update slide heading: 'Lots of Gitter actually' → 'Matrix Community with Element'
- Add '(via Element)' to chat section to indicate recommended client
- Update content to link to matrix.to with instructions to use Element or any Matrix client
- Update metadata key point: 'Matrix/Gitter' → 'Matrix (via Element client)'
- Update IMAGE_HANDLING.md to reflect new image filename

All references now align with Galaxy's current Matrix infrastructure per training.galaxyproject.org

Verification: make lint-sphinx confirms all 81 images still valid ✓

--- a/topics/ecosystem/content.yaml
+++ b/topics/ecosystem/content.yaml
@@ -12,7 +12,7 @@
   id: chat-galaxyproject-lobbyhttps
   heading: ''
   content: |-
-    **Chat:** [galaxyproject Lobby](https://matrix.to/#/#galaxyproject_Lobby:gitter.im)
+    **Chat:** [galaxyproject Lobby](https://matrix.to/#/#galaxyproject_Lobby:gitter.im) (via Element)
 
     **GitHub:** [github.com/galaxyproject ](https://github.com/galaxyproject)
 
@@ -30,12 +30,12 @@
     categories. User-facing applications, projects for Galaxy plugin developers,
     and projects for Galaxy administrators.
 - type: slide
-  id: lots-of-gitter-actually
-  heading: Lots of Gitter actually
+  id: matrix-community-with-element
+  heading: Matrix Community with Element
   content: |-
-    ![galaxyproject gitter landing](../../images/gitter_galaxyproject.png)
+    ![galaxyproject Matrix Element community](../../images/element_galaxyproject.png)
 
-    https://gitter.im/galaxyproject
+    Access via Element client or any Matrix client at https://matrix.to/#/#galaxyproject_Lobby:gitter.im
 - type: slide
   id: more-links-well-mention-as-we-go-throug
   heading: ''
