Update social media slides.

--- a/topics/ecosystem/content.yaml
+++ b/topics/ecosystem/content.yaml
@@ -18,7 +18,9 @@
 
     **GitHub:** [github.com/galaxyproject ](https://github.com/galaxyproject)
 
-    **Twitter:** #usegalaxy, @galaxyproject
+    **Bluesky:** [bsky.app/profile/galaxyproject.bsky.social](https://bsky.app/profile/galaxyproject.bsky.social)
+    **Mastodon:** [@galaxyproject](https://mstdn.science/@galaxyproject)
+    **LinkedIn:** [Galaxy Project](https://www.linkedin.com/groups/4907635/)
   class: enlarge200
 - type: slide
   id: the-galaxyproject-projects
