Updates to ecosystem content.

--- a/topics/ecosystem/metadata.yaml
+++ b/topics/ecosystem/metadata.yaml
@@ -10,7 +10,7 @@ training:
   - Understand the difference between user-facing and developer tools
   - Learn about Galaxy communication channels
   key_points:
-  - Multiple user-facing applications (Galaxy, CloudLaunch, Training Material)
+  - Multiple user-facing applications (Galaxy, Training Material)
   - Developer libraries for plugin developers
   - Admin tools for deployment
   - Active community on Matrix (via Element client)
