Progress on display, development tooling, and updating content for the last several years.

--- a/images/Makefile
+++ b/images/Makefile
@@ -18,5 +18,5 @@ plantuml.jar:
 	wget http://jaist.dl.sourceforge.net/project/plantuml/plantuml.jar || curl --output plantuml.jar http://jaist.dl.sourceforge.net/project/plantuml/plantuml.jar
 
 clean:
-	rm -f *.svg
+	rm -f *.platnuml.svg
 	rm -f *.mindmap.plantuml.txt
