--- a/topics/client/content.yaml
+++ b/topics/client/content.yaml
@@ -124,12 +124,14 @@
 
     The idea behind Vue.js is fairly simple to pick up and there is a lot of great tutorials and videos available. https://vuejs.org/v2/guide/ is a really good jumping off point.
 - type: slide
-  id: vuex
-  heading: Vuex
+  id: pinia
+  heading: Pinia
   content: |-
-    > Vuex is a state management pattern + library for Vue.js applications. It serves as a centralized store for all the components in an application, with rules ensuring that the state can only be mutated in a predictable fashion.
+    > Pinia is a state management library for Vue.js. It provides stores as the central source of truth, with a simpler, more intuitive API compared to earlier solutions. It supports Vue 2 and Vue 3 with Composition API.
 
-    https://vuex.vuejs.org/
+    https://pinia.vuejs.org/
+
+    Key features include devtools integration, hot module replacement, type-safe stores, and seamless TypeScript support.
 - type: slide
   id: client-unit-tests
   heading: Client Unit Tests
