--- a/topics/dependency-injection/metadata.yaml
+++ b/topics/dependency-injection/metadata.yaml
@@ -1,17 +1,8 @@
-# Example metadata.yaml for dependency-injection topic
-# This serves as a reference implementation
-
 topic_id: dependency-injection
 title: Dependency Injection in Galaxy
-status: draft  # draft | stable | deprecated
-
-# Tracking
-created: 2025-01-15
-last_updated: 2025-01-15
-last_updated_by: jmchilton
-
-# Training slide metadata
 training:
+  tutorial_number: 6
+  subtitle: The architecture of connecting Galaxy components.
   questions:
     - What is dependency injection?
     - Why does Galaxy use dependency injection?
@@ -57,23 +48,9 @@ related_code_paths:
   - lib/galaxy/webapps/galaxy/api/
   - lib/galaxy/celery/tasks.py
 
-# Images used in slides (shared across topics)
-images:
-  - path: ../../images/app_py2.plantuml.svg
-    alt: "Python 2 era app structure"
-  - path: ../../images/app_types_no_interface.plantuml.svg
-    alt: "Typed app without interface showing circular dependency"
-  - path: ../../images/app_types.plantuml.svg
-    alt: "Typed app with StructuredApp interface breaking circular dependency"
-  - path: ../../images/app_decomposed.plantuml.svg
-    alt: "Decomposed app structure with dependency injection"
-  - path: ../../images/lagom_ss.png
-    alt: "Lagom dependency injection library website screenshot"
-
 # Contributors
 contributors:
   - jmchilton
-  - bgruening
 
 # Claude context
 claude:
