Cache PlantUML jar in GitHub Actions workflow

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -50,6 +50,12 @@ jobs:
         run: |
           uv sync --all-extras
 
+      - name: Cache PlantUML jar
+        uses: actions/cache@v4
+        with:
+          path: images/plantuml.jar
+          key: plantuml-jar-v1
+
       - name: Validate topics
         run: make validate
 
